--- a/src/login.css
+++ b/src/login.css
@@ -33,55 +33,17 @@ body {
 }
 
 .Modal {
-  width: 700px;
-  height: 500px;
+  width: 70ex;
+  height: 60ex;
   display: flex;
   flex-direction: row;
-  box-shadow: 0 6px 10px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 6px 10px 10px rgba(0, 0, 0, 0.5);
   flex-grow: 5;
-}
-
-.NavigationPanel {
-  background-color: rgba(244, 246, 248, 0.98);
-  width: 80px;
-  color: rgb(64, 70, 86);
-  font-size: 30px;
-  order: 1;
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-}
-
-.back {
-  flex: 2;
-}
-
-.dots {
-  display: flex;
-  flex: 5;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-}
-
-.dot {
-  font-size: 5px;
-  color: rgba(64, 70, 86, 0.5);
-  padding-top: 15px;
-}
-
-.dotSelected {
-  font-size: 5px;
-  color: rgba(64, 70, 86, 1);
-  padding-top: 15px;
 }
 
 .signIn {
   background-color: rgba(151, 105, 245, 0.98);
-  color: rgb(218, 231, 241);
+  color:rgb(218, 231, 241);
   font-family: "Roboto Condensed", sans-serif;
   font-size: 20px;
   order: 1;
